add navbar (notclickable)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="./css/homepage.css"
 </head>
 <body>
-    <h1>slack</h1>
+    <header>
+        <div>
+            <img src="./assets/images/slack-salesforce-logo-nav-black@2x.png" id="logo">
+        </div>
+        <div class="searchlogo">
+            <a href="" id="searchlogo"><img src="./assets/images/search.svg" id="searchlogo"></a>
+        </div>
+        <div class="getStarted">
+            GET STARTED
+        </div>
+        <div class="hamburger">
+            <img src="./assets/images/hamburger.svg" id="hamburg">
+        </div>
+    </header>
+    <main>
+        <video width="100%" autoplay loop>
+            <source src="./assets/headline.mp4">
+        </video>
+        <div class="main-button">
+            <a href="">GET STARTED</a>
+            <a href="">FIND YOUR PLAN -></a>
+            <p>Slack is free to try</p>
+        </div>
+    </main>
 </body>
 </html>
