--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </div>
     </header>
     <main>
-        <video width="100%" autoplay loop>
-            <source src="./assets/headline.mp4">
+        <video width="100%">
+            <source src="./assets/videos/headline.mp4">
         </video>
         <div class="main-button">
+            <p>Start a conversation. Close your next deal. Team up with AI agents. It all happens in Slack.</p>
             <a href="">GET STARTED</a>
-            <a href="">FIND YOUR PLAN -></a>
-            <p>Slack is free to try</p>
+            <a href="">FIND YOUR PLAN</a>
         </div>
     </main>
 </body>
