entering main content

--- a/index.html
+++ b/index.html
@@ -30,6 +30,36 @@
             <a href="">GET STARTED</a>
             <a href="">FIND YOUR PLAN</a>
         </div>
+        <div class="main-connect">
+            <img src="./assets/images/connect/logo-gm-small@2x.png">
+            <img src="./assets/images/connect/logo-openai-small@2x.png">
+            <img src="./assets/images/connect/logo-target-small@2x.png">
+            <img src="./assets/images/connect/logo-paramount-small@2x.png">
+            <img src="./assets/images/connect/logo-stripe-small@2x.png">
+            <img src="./assets/images/connect/logo-ibm-small@2x.png">
+        </div>
+        <div class="main-content">
+            
+            <video src="assets/videos/Team discussing work in the Slack app.webm" autoplay loop class="discussing"></video>
+            <div class="arc">
+                
+            </div>
+            <div class="bg">
+                <div class="headline">
+                    <h1>Bring your people, projects, apps, and AI agents together.</h1>
+                </div>
+                <div class="collab">
+                    <p>COLLABORATION</p>
+                    <h1>Communicate in countless ways from one place.</h1>
+                    <p>Slack is built for bringing people and information together. Type things out. Talk things out. Invite external organizations into the conversation.
+                    </p>
+                    <div class="fortune">
+                        <h1>80%</h1>
+                        <p>of the Fortune 100 use Slack Connect to work with partners and customers</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
