--- a/index.html
+++ b/index.html
@@ -242,6 +242,15 @@
             </p>
             <a href=""><p>Learn more -></p></a>
         </div>
+        <div class="quote">
+            <h1>There’s a plan for every kind of team.</h1>
+        </div>
+        <div class="type">
+            <div class="free">
+                <h2>Free</h2>
+                <p>A smarter, simpler way to chat and collaborate.</p>
+            </div>
+        </div>
         </div>
       </div>
     </main>
