--- a/index.html
+++ b/index.html
@@ -244,15 +244,65 @@
         </div>
         <div class="quote">
             <h1>There’s a plan for every kind of team.</h1>
+            <p>Start with a premium plan, or try the free version.</p>
         </div>
-        <div class="type">
-            <div class="free">
+        <div class="packages-container">
+            <div class="packages">
                 <h2>Free</h2>
                 <p>A smarter, simpler way to chat and collaborate.</p>
+                <ul>
+                  <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>90 days of message history</p></li>
+                  <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>10 app integrations</p></li>
+                  <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>1:1 audio and video meetings</p></li>
+                </ul>
             </div>
+            <div class="packages">
+              <h2>Pro</h2>
+              <p>More power for small teams who want to accelerate work.</p>
+
+              <p>Everything in Free, and:</p>
+              <ul>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Unlimited message history, app integrations, and automations</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Group audio and video meetings</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Collaborate with people outside your organization</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Create and manage projects in documents and lists</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px">
+                  <p class="packai">Slack AI add-on available <span>NEW</span></p></li>
+              </ul>
+            </div>
+            <div class="packages">
+              <h2>Pro</h2>
+              <p>More power for small teams who want to accelerate work.</p>
+
+              <p>Everything in Free, and:</p>
+              <ul>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Unlimited message history, app integrations, and automations</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Group audio and video meetings</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Collaborate with people outside your organization</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Create and manage projects in documents and lists</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px">
+                  <p class="packai">Slack AI add-on available <span>NEW</span></p></li>
+              </ul>
+            </div>
+            <div class="packages">
+              <h2>Pro</h2>
+              <p>More power for small teams who want to accelerate work.</p>
+
+              <p>Everything in Free, and:</p>
+              <ul>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Unlimited message history, app integrations, and automations</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Group audio and video meetings</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Collaborate with people outside your organization</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px"><p>Create and manage projects in documents and lists</p></li>
+                <li><img src='./assets/images/icons/tick-svgrepo-com.svg' width="25px">
+                  <p class="packai">Slack AI add-on available <span>NEW</span></p></li>
+              </ul>
+            </div>
+            
         </div>
         </div>
       </div>
     </main>
+    <script src="./src/index.js"></script>
   </body>
 </html>
