--- a/index.html
+++ b/index.html
@@ -436,21 +436,21 @@
             <div class="comp-stat-container">
                 <div class="comp-stat">
                     <div class="stat" id="ninezero">
-                      <h1>90</h1>
+                      <h1 data-count="90">0</h1>
                       <h1>%</h1>
                     </div>
                     <p>of users say Slack helps them stay more connected</p>
                 </div>
                 <div class="comp-stat">
                   <div class="stat" id="fourthree">
-                    <h1>43</h1>
+                    <h1 data-count="43">0</h1>
                     <h1></h1>
                   </div>
                   <p>The average number of apps used by teams in Slack</p>
                 </div>
               <div class="comp-stat">
                 <div class="stat" id="eightseven">
-                  <h1>87</h1>
+                  <h1 data-count="87">0</h1>
                   <h1>%</h1>
                 </div>
                 <p>of users say Slack helps them collaborate more efficiently</p>
