--- a/index.html
+++ b/index.html
@@ -452,20 +452,64 @@
         <h1>Your Slack deep dive starts here.</h1>
         <div class="bg3-swiper">
           <div class="bg3-swiper-wrapper">
-            <div class="card" id="card1">
+            <div class="card-slide" id="card1">
               <img alt="A picture of two women clapping at a conference next to a Dreamforce logo." loading="lazy"
                 class="lazyload"
                 data-src="https://a.slack-edge.com/b37cac3/marketing/img/promos/promo-card-dreamforce-2023.png"
                 data-srcset="https://a.slack-edge.com/b37cac3/marketing/img/promos/promo-card-dreamforce-2023.png 1x, https://a.slack-edge.com/b37cac3/marketing/img/promos/promo-card-dreamforce-2023@2x.png 2x"
                 src="https://a.slack-edge.com/b37cac3/marketing/img/promos/promo-card-dreamforce-2023.png"
                 srcset="https://a.slack-edge.com/b37cac3/marketing/img/promos/promo-card-dreamforce-2023.png 1x, https://a.slack-edge.com/b37cac3/marketing/img/promos/promo-card-dreamforce-2023@2x.png 2x">
-              <p>sw</p>
-              <h1>sw</h1>
-              <div>sw</div>
+              <p>Event</p>
+              <h1>Ready for the future of AI in Slack?</h1>
+              <div class="readmore">
+                <p>READMORE</p>
+                <p>-></p>
+              </div>
+            </div>
+            <div class="card-slide" id="card1">
+              <img alt="Slack Agentforce mascot along with various others." loading="lazy" class="lazyload" data-src="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1.jpg" data-srcset="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1.jpg 1x, https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1@2x.jpg 2x" src="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1.jpg" srcset="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1.jpg 1x, https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1@2x.jpg 2x">
+              <p>Webinar</p>
+              <h1>Unlock Agentic Productivity for Every Employee</h1>
+              <div class="readmore">
+                <p>READMORE</p>
+                <p>-></p>
+              </div>
+            </div>
+            <div class="card-slide" id="card1">
+              <img alt="Slack user interface with a floating agentforce mascot." loading="lazy" class="lazyload" data-src="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2.jpg" data-srcset="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2.jpg 1x, https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2@2x.jpg 2x" src="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2.jpg" srcset="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2.jpg 1x, https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2@2x.jpg 2x">
+              <p>Blog</p>
+              <h1>Agentforce 2.0;
+                Agentforce Arrives in Slack
+              </h1>
+              <div class="readmore">
+                <p>READMORE</p>
+                <p>-></p>
+              </div>
+            </div>
+            <div class="card-slide" id="card1">
+              <img alt="An illustration of numbers 2, 1, and 0 hanging on a wall." loading="lazy" class="lazyload" data-src="https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity.jpg" data-srcset="https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity.jpg 1x, https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity@2x.jpg 2x" src="https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity.jpg" srcset="https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity.jpg 1x, https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity@2x.jpg 2x">
+              <p>Webinar</p>
+              <h1>Top Slack Tips to Boost Productivity</h1>
+              <div class="readmore">
+                <p>READMORE</p>
+                <p>-></p>
+              </div>
             </div>
           </div>
           <div class="bg3-navi">
-            navi
+
+            <svg id="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"/>
+            </svg>
+            <svg id="2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"/>
+            </svg>
+            <svg id="3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"/>
+            </svg>
+            <svg id="4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"/>
+            </svg>
           </div>
         </div>
         <div class="bg3-info">
@@ -693,7 +737,6 @@
           </p>
         </div>
         <div>
-
         </div>
       </div>
     </div>
@@ -710,7 +753,8 @@
         <div class="getStarted">GET STARTED</div>
       </a>
       <div class="hamburger">
-        <a href="javascript:void(0)" onclick="closeSidebar()"><img src="https://a.slack-edge.com/08a75f1/marketing/img/nav/mobile-opened.svg"></a>
+        <a href="javascript:void(0)" onclick="closeSidebar()"><img
+            src="https://a.slack-edge.com/08a75f1/marketing/img/nav/mobile-opened.svg"></a>
       </div>
     </header>
     <div class="sidebar-content">
