--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </header>
   <main>
-    <video width="100%">
+    <video width="100%" class="wherework">
       <source src="./assets/videos/headline.mp4" />
     </video>
     <div class="main-button">
@@ -466,7 +466,7 @@
                 <p>-></p>
               </div>
             </div>
-            <div class="card-slide" id="card1">
+            <div class="card-slide" id="card2">
               <img alt="Slack Agentforce mascot along with various others." loading="lazy" class="lazyload" data-src="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1.jpg" data-srcset="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1.jpg 1x, https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1@2x.jpg 2x" src="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1.jpg" srcset="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1.jpg 1x, https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-1@2x.jpg 2x">
               <p>Webinar</p>
               <h1>Unlock Agentic Productivity for Every Employee</h1>
@@ -475,7 +475,7 @@
                 <p>-></p>
               </div>
             </div>
-            <div class="card-slide" id="card1">
+            <div class="card-slide" id="card3">
               <img alt="Slack user interface with a floating agentforce mascot." loading="lazy" class="lazyload" data-src="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2.jpg" data-srcset="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2.jpg 1x, https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2@2x.jpg 2x" src="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2.jpg" srcset="https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2.jpg 1x, https://a.slack-edge.com/cd054cc/marketing/img/agentforce/lp/updated-img-promo-2@2x.jpg 2x">
               <p>Blog</p>
               <h1>Agentforce 2.0;
@@ -486,7 +486,7 @@
                 <p>-></p>
               </div>
             </div>
-            <div class="card-slide" id="card1">
+            <div class="card-slide" id="card4">
               <img alt="An illustration of numbers 2, 1, and 0 hanging on a wall." loading="lazy" class="lazyload" data-src="https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity.jpg" data-srcset="https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity.jpg 1x, https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity@2x.jpg 2x" src="https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity.jpg" srcset="https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity.jpg 1x, https://a.slack-edge.com/426ed86/marketing/img/promos/promo-boost-productivity@2x.jpg 2x">
               <p>Webinar</p>
               <h1>Top Slack Tips to Boost Productivity</h1>
